# cuda-fashion-mnist

./: .gitignore  CMakeLists.txt  README.md  inference.cu  main-T2-v1.cu  main-T2-v2.cu  main-fp16v1.cu  main-fp16v2.cu  main-fp32v1.cu  main-fp32v2.cu  main-mwwa-v1.cu  main-mwwa-v2.cu  main-mwwa-v3.cu  train_T2.py
scnn/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.weight.txt  fc2.bias.txt  fc3.bias.txt  fc3.weight.txt  program1_scnn_train.py  soup_weights.py  test.py  train_T2_8905.py  train_T2_8991.py
scnn/42/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
scnn/43_512_9067/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
scnn/43_9037/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
scnn/50/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
scnn/T2_43_512_8991/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  fc3.bias.txt  fc3.weight.txt
scnn/T2_44_512_9032/: conv1.bias.txt  conv1.weight.txt  conv2.bias.txt  conv2.weight.txt  fc1.bias.txt  fc1.weight.txt  fc2.bias.txt  fc2.weight.txt  (+2 more)
提交/: inference.cu  train.py
(+92 files in other folders)
